# Practice_LeetCode_C

./: .clang-format  .gitignore  04_main.c  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: guidelines.md  issue-guideline-template.md  issue-guideline.md
.github/workflows/: cmakeMultiPlatform.yml  codeStyleCheck.yml  commonFuncLint.yml  commonFuncTest.yml  common_function_lint.yml  common_function_test.yml  greetings.yml  programming_topic_lint.yml  programming_topic_test.yml
00_Basics/: CMakeLists.txt  README.md
00_Basics/00_VScode_Settings/: IDE_settings.txt  README.md  bashrc.md  c.json  c_snippets.txt  global_snippets.code-snippets  settings.json  vscode_extensions_list.txt
00_Basics/00_VScode_Settings_Backup/: cpp.json  vscode_extensions_list.txt
00_Basics/01_Common_Func/: CMakeLists.txt  README.md  commandFunc.c  commandHeader.h  commonHeader.h  commonRingBuffer.c  main.c  printCommand.c  printCommand.h  ringBuffer.c  ring_buffer.c  ring_buffer.h
00_Basics/01_Common_Func/cfg/: compileCfg.h
00_Basics/01_Common_Func/inc/: commonArray.h  commonBinaryTree.h  commonCmd.h  commonHashTable.h  commonHeader.h  commonHelper.h  commonLinkedList.h  commonLinkedListDummy.h  commonQueue.h  commonRingBuffer.h  commonSingleValue.h  commonStack.h  commonString.h  commonTypeDef.h  ringBuffer.h
00_Basics/01_Common_Func/inc/commonDef/: commonModuleDef.h  commonPrintDef.h  commonTypeDef.h
00_Basics/01_Common_Func/inc/commonTest/: commonUnitTest.h
00_Basics/01_Common_Func/src/: commonArray.c  commonBinaryTree.c  commonCmd.c  commonHashTable.c  commonHeader.c  commonHelper.c  commonLinkedList.c  commonLinkedListDummy.c  commonQueue.c  commonRingBuffer.c  commonSingleValue.c  commonStack.c  commonString.c
00_Basics/01_Common_Func/src/commonArray/: commonArray.c
00_Basics/01_Common_Func/src/commonBinaryTree/: commonBinaryTree.c
00_Basics/01_Common_Func/src/commonCmd/: commonCmd.c
00_Basics/01_Common_Func/test/: commonArrayTest.cc  commonBinaryTreeTest.cc  commonCmdTest.cc  commonHashTableTest.cc  commonLinkedListDummyTest.cc  commonLinkedListTest.cc  commonQueueTest.cc  commonRingBufferTest.cc  commonSingleValueTest.cc  commonStackTest.cc  commonStringTest.cc  main.c
00_Basics/01_Common_Func/tests/: commonArrayTest.cc  commonBinaryTreeTest.cc
00_Basics/02_Clean_Exe/: killExes.bat
00_Basics/02_Common_Func/: main.c
00_Basics/02_Common_Header/: README.md  commonHeader.h
00_Basics/02_Programming_Notes/: 01_GeneralInfo.md  02_MemoryAllocation.md  03_StructInit.md  04_DataTypes.md  README.md
00_Basics/03_Programming_Notes/: README.md
00_Basics/03_Run_Tests/: runCodingStyleCheck.sh  runTests.sh
00_Linked_List/01_leetcode0021_mergeTwoLists/: main
00_Linked_List/01_leetcode21_mergeTwoLists/: note.md
00_Linked_List/02_leetcode86_partition/: note.md
00_Linked_List/03_leetcode0023_mergeKLists/: note.md
00_Linked_List/04_leetcode0019_removeNthFromEnd/: note.md
00_Linked_List/05_leetcode0876_middleNode/: note.md
00_Linked_List/06_leetcode0142_detectCycle/: note.md
00_Linked_List/07_leetcode0160_getIntersectionNode/: note.md
00_Linked_List/07_leetcode160_getIntersectionNode/: note.md
00_Linked_List/offer022_getKthFromEnd/: note.md
00_Prerequisite/01_Clean_Exe/: killExes.sh
00_compilePractice/: CMakeLists.txt
01_Array/02_leetcode0026_removeDuplicates/: note.md
01_Array/03_leetcode0027_removeElement/: note.md
01_Array/04_leetocde0283_moveZeroes/: note.md
01_Common_Func/inc/: commonLinkedList.h
01_Programmercarl_Series/: README.md
01_Programming_Topics/: README.md
01_leetcode21_mergeTwoLists/: main.c
02_Labuladong_Series/: README.md
02_Misc/: README.md
02_Programming_Topics/: README.md
02_leetcode86_partition/: main  main.c
03_Misc/: README.md
03_Real_World_Problem/: README.md
03_leetcode23_mergeKLists/: CMakeLists.txt  main  main.c
03_leetcode23_mergeKLists/include/: leetcode023.h  leetcode23.h
03_leetcode23_mergeKLists/src/: CMakeLists.txt  leetcode023.c  main.c
03_leetcode23_mergeKLists/test/: CMakeLists.txt  main_test.cc  test_leetcode023_func.cc
03_temp/: Cross_Section_Line_Problem.md
04_Misc/: README.md
F00_Prerequisite/: README.md
F01_Common_Functions/: CMakeLists.txt  README.md
F01_Common_Functions/cfg/: compileCfg.h  compile_cfg.h
F01_Common_Functions/inc/: commonArray.h  commonBinaryTree.h  commonCmd.h  commonHashTable.h  commonLinkedList.h  commonLinkedListDummy.h  commonQueue.h  commonRingBuffer.h  commonSingleValue.h  commonStack.h  commonString.h  common_array.h  common_binary_tree.h  common_cmd.h  common_hash_table.h  common_linked_list.h  common_linked_list_dummy.h  common_queue.h  common_ring_buffer.h  common_single_value.h  common_stack.h  common_string.h
F01_Common_Functions/inc/commonDef/: commonPrintDef.h  commonTypeDef.h  common_print_def.h
F01_Common_Functions/inc/common_def/: common_print_def.h  common_type_def.h
F01_Common_Functions/src/: commonArray.c  commonBinaryTree.c  commonCmd.c  commonHashTable.c  commonLinkedList.c  commonLinkedListDummy.c  commonQueue.c  commonRingBuffer.c  commonSingleValue.c  commonStack.c  commonString.c  common_array.c  common_binary_tree.c  common_cmd.c  common_hash_table.c  common_linked_list.c  common_linked_list_dummy.c  common_queue.c  common_ring_buffer.c  common_single_value.c  common_stack.c  common_string.c
F01_Common_Functions/test/: commonArrayTest.cc  commonBinaryTreeTest.cc  commonCmdTest.cc  commonHashTableTest.cc  commonLinkedListDummyTest.cc  commonLinkedListTest.cc  commonQueueTest.cc  commonRingBufferTest.cc  commonSingleValueTest.cc  commonStackTest.cc  commonStringTest.cc  common_array_test.cc  common_binary_tree_test.cc  common_cmd_test.cc  common_hash_table_test.cc  common_linked_list_dummy_test.cc  common_linked_list_test.cc  common_queue_test.cc  common_ring_buffer_test.cc  common_single_value_test.cc  common_stack_test.cc  common_string_test.cc
F02_Programming_Topics/: README.md
F03_Misc/: README.md
cmakePractice/: CMakeLists.txt
cmakePractice/src/: main.c
compilePractice/: main.c
(+1388 files in other folders)
